package com.StockExchangeModel;

public class Main {
    public static void main(String[] args) {
        Demo.demo();
    }
}
